--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <br /> -->
 
         <table class="pub_table">
-          <tr id="xiu2024puzzleavatar" class="focus">
+          <tr id="AMFS" class="focus">
             <td class="pub_td1">
               <img src="./image/AMFS.png" />
               
@@ -333,7 +333,7 @@
             </td>
           </tr>
 
-          <tr id="ye2024stablenormal">
+          <tr id="MDAPN">
             <td class="pub_td1">
               <img src="./image/MDAPN.png" />
             </td>
@@ -405,8 +405,8 @@
 
         <br /> -->
 
-        <table class="pub_table" class="focus">
-          <tr id="cpurenderer">
+        <table class="pub_table">
+          <tr id="cpurenderer"  class="focus">
             <td class="pub_td1">
               <img src="./image/fluid.gif" />
               
