--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                           ></span
                         ></span
                       ></a
-                    ><br />
+                    ><br /><br />
                     <a href="mailto: Keming.Jiao@sony.com">
                       <span
                         class="fa fa-envelope"
@@ -259,8 +259,8 @@
         <br /><br />
 
         <table><tr>
-          <td><img src=image/fluid.gif border=20></td>
-          <td><img src=image/video.gif border=20></td>
+          <td><img src=image/fluid.gif border=0 height="150"></td>
+          <td><img src=image/video.gif border=0 height="150"></td>
         </tr>
         </table>
 
