--- a/index.html
+++ b/index.html
@@ -258,11 +258,13 @@
         </div>
         <br /><br />
 
+      <div style="text-align: center;">
         <table><tr>
-          <td><img src=image/fluid.gif border=0 height="150"></td>
-          <td><img src=image/video.gif border=0 height="150"></td>
+          <td><img src=image/fluid.gif border=0 width="80%"></td>
+          <td><img src=image/video.gif border=0 width="20%"></td>
         </tr>
         </table>
+      </div>
 
         <h1 id="citation">
           Publications
