--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                           ></span
                         ></span
                       ></a
-                    ><br /><br />
+                    ><br />
+                    <br />
                     <a href="mailto: Keming.Jiao@sony.com">
                       <span
                         class="fa fa-envelope"
@@ -104,6 +105,7 @@
                         ></span
                       ></a
                     ><br />
+                    <br />
                   </div>
 
                   <ul class="icon-list">
@@ -258,13 +260,9 @@
         </div>
         <br /><br />
 
-      <div style="text-align: center;">
-        <table><tr>
-          <td><img src=image/fluid.gif border=0 width="80%"></td>
-          <td><img src=image/video.gif border=0 width="20%"></td>
-        </tr>
-        </table>
-      </div>
+        <div align="center">
+          <img src="image/fluid.gif" alt="Shown" width="800px">
+        </div>
 
         <h1 id="citation">
           Publications
@@ -962,7 +960,7 @@
             href="https://xiuyuliang.cn/"
           >
             Prof. Yuliang Xiu</a
-          > for this template. <br />
+          > for this template. Find the code of shown gif <a href="https://github.com/JiaoKM/Fluid-Simulation-rendered-by-OpenGL-RayTracing">here</a>. <br />
           This page is last updated at <span style="color: blue" id="demo"></span
           ></strong>
         </div>
