--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
             <td>
               <br />
               <h1>Biography</h1>
-              <!-- <b>I will start to work at Sony Nordic next January in Vision & AI systems!</b><br />
-              <del><b>I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!</b
-              ></del><br /> -->
+              
+              <b>I'm looking for PhD opportunities in Computer Graphics, 2026 Fall or 2027 Spring! Please feel free to reach out if you are aware of any relevant opportunities.</b
+              ><br />
 
               <!-- Calendly badge widget begin -->
               <link
@@ -195,7 +195,7 @@
 
               <hr />
 
-              I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
+              I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics and 3D Vision. I hope I can make my own contribution in these areas.
               <br />
               <br />
               On my student ID card, I am an engineering student. In my mind, I am a society observer. But in my heart, I am just a lifelong gamer exploring the world.
@@ -239,8 +239,8 @@
         </h1>
 
         <div style="height: 205px; overflow: auto">
-          [2025/01/20] Begin to work with great colleagues on Vision tasks at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Nordic</a>.<br />
-          [2024/12/03] I will start to work at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Nordic</a> next January in Vision & AI systems!
+          [2025/01/20] Begin to work with great colleagues on Vision tasks at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Europe</a>.<br />
+          [2024/12/03] I will start to work at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Europe</a> next January in Vision & AI systems!
           <br />
           [2024/09/25] I attend the scholarship ceremony of LU this year and record a short 
           <a href="https://www.bilibili.com/video/BV12SxVeTE3o/?spm_id_from=333.999.0.0&vd_source=86d8dcac0057c7ea489aea8846dc4434"
@@ -422,6 +422,9 @@
             <strong>Teaching Assistant</strong>
           </li>
           <ul>
+            <li>
+              Computer Graphics, Lund University, 2025 Fall
+            </li>
             <li>
               Thinking and Methodology in Programming (C++), Shanghai
               Jiao Tong University, 2021 & 2022 Fall
