--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   </div>
 
                   <ul class="icon-list">
-                    <a style="color: black" href="./CV/CV_2501.pdf">
+                    <a style="color: black" href="./CV/CV_2508.pdf">
                       <span class="ai ai-cv fa-xl"></span>
                     </a>
 
@@ -239,6 +239,7 @@
         </h1>
 
         <div style="height: 205px; overflow: auto">
+          [2025/08/25] Work as an SI Leader (teaching assistant) of Computer Graphics course in LTH.<br />
           [2025/01/20] Begin to work with great colleagues on Vision tasks at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Europe</a>.<br />
           [2024/12/03] I will start to work at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Europe</a> next January in Vision & AI systems!
           <br />
@@ -256,7 +257,7 @@
           [2024/03/21] I am accepted into the Master's Programme of VR&AR in Lund University, and get the scholarship for international students.<br />
           [2023/02/08] Win the <b>Best Overall Project</b> in <a href="https://www.imperial.ac.uk/continuing-professional-development/short-courses/summer-schools/winterschool/imperial-data-science-online-winter-school/">Imperial Data Science Winter School 2023</a>
            held by Imperial College London!<br />
-          [2021/09/16] Start to work as a teaching assistant in course Thinking and Methodology in Programming (C++).<br />
+          [2021/09/16] Start to work as a teaching assistant of course Thinking and Methodology in Programming (C++).<br />
         </div>
         <br /><br />
 
