--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
               <hr />
 
-              I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics and 3D Vision. I hope I can make my own contribution in these areas.
+              I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. I am also an intern at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Europe</a>, working on computer vision tasks. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics and 3D Vision. I hope I can make my own contribution in these areas.
               <br />
               <br />
               On my student ID card, I am an engineering student. In my mind, I am a society observer. But in my heart, I am just a lifelong gamer exploring the world.
@@ -451,6 +451,13 @@
         
           <div style="height: 205px; overflow: auto">
             <ul>
+              <li>
+                <strong>特别篇 </strong> 北欧留学一年回顾 | 23岁生日音乐电台 [<a
+                  href="https://www.bilibili.com/video/BV1DGrRYmE98/?share_source=copy_web&vd_source=968c6017deab9d89362c9ac341eb6631"
+                  ><i class="fa fa-video" aria-hidden="true">&nbsp;</i
+                  >Link</a
+                >]
+              </li>
               <li>
                 <strong>歌曲盘点2024 </strong> 个人年度收听TOP30 [<a
                   href="https://www.bilibili.com/video/BV1DGrRYmE98/?share_source=copy_web&vd_source=968c6017deab9d89362c9ac341eb6631"
