--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <ul>
               <li>
                 <strong>特别篇 </strong> 北欧留学一年回顾 | 23岁生日音乐电台 [<a
-                  href="https://www.bilibili.com/video/BV1DGrRYmE98/?share_source=copy_web&vd_source=968c6017deab9d89362c9ac341eb6631"
+                  href="https://www.bilibili.com/video/BV1XN4szgEGt/?spm_id_from=333.1387.0.0&vd_source=86d8dcac0057c7ea489aea8846dc4434"
                   ><i class="fa fa-video" aria-hidden="true">&nbsp;</i
                   >Link</a
                 >]
