--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <br />
               <h1>Biography</h1>
               
-              <b>I'm looking for PhD opportunities in Computer Graphics, 2026 Fall or 2027 Spring! Please feel free to reach out if you are aware of any relevant opportunities.</b
+              <b>I'm looking for work opportunities in AI, Vision or Graphics, starting from Autumn 2026 in Lund/Malmö, Sweden! Please feel free to reach out if you are aware of any relevant opportunities.</b
               ><br />
 
               <!-- Calendly badge widget begin -->
