--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. I am also an intern at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Europe</a>, working on computer vision tasks. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics and 3D Vision. I hope I can make my own contribution in these areas.
               <br />
               <br />
-              On my student ID card, I am an engineering student. In my mind, I am a society observer. But in my heart, I am just a lifelong gamer exploring the world.
+              On my ID card, I am an engineering student. In my mind, I am an opinion expresser. But in my heart, I am a world explorer.
               <br />
             </td>
           </tr>
