--- a/index.html
+++ b/index.html
@@ -261,8 +261,38 @@
         </div>
         <br /><br />
 
-        <div align="center">
-          <img src="image/fluid.gif" alt="Shown" width="800px">
+        <h1>Projects</h1>
+        <div class="video-scroll-container">
+          <div class="video-scroll">
+            <div class="video-item">
+              <video controls>
+                <source src="videos/LTH_Fluid.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="video-caption">LTH Fluid</p>
+            </div>
+            <div class="video-item">
+              <video controls>
+                <source src="videos/FountainDesigner.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="video-caption">Fountain Designer</p>
+            </div>
+            <div class="video-item">
+              <video controls>
+                <source src="videos/ReLiveScene.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="video-caption">ReLive Scene</p>
+            </div>
+            <div class="video-item">
+              <video controls>
+                <source src="videos/Football Replays Go VR.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="video-caption">Football Replays Go VR</p>
+            </div>
+          </div>
         </div>
 
         <h1 id="citation">
@@ -971,7 +1001,7 @@
             href="https://xiuyuliang.cn/"
           >
             Prof. Yuliang Xiu</a
-          > for this template. Find the code of shown gif <a href="https://github.com/JiaoKM/Fluid-Simulation-rendered-by-OpenGL-RayTracing">here</a>. <br />
+          > for this wonderful template.  <br />
           This page is last updated at <span style="color: blue" id="demo"></span
           ></strong>
         </div>
