--- a/index.html
+++ b/index.html
@@ -273,13 +273,6 @@
             </div>
             <div class="video-item">
               <video controls>
-                <source src="videos/FountainDesigner.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
-              <p class="video-caption">Fountain Designer</p>
-            </div>
-            <div class="video-item">
-              <video controls>
                 <source src="videos/ReLiveScene.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
@@ -287,10 +280,24 @@
             </div>
             <div class="video-item">
               <video controls>
+                <source src="videos/FountainDesigner.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="video-caption">Fountain Designer</p>
+            </div>
+            <div class="video-item">
+              <video controls>
                 <source src="videos/Football Replays Go VR.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <p class="video-caption">Football Replays Go VR</p>
+            </div>
+            <div class="video-item">
+              <video controls>
+                <source src="videos/JellyWaterTetris.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              <p class="video-caption">Jelly Water Tetris</p>
             </div>
           </div>
         </div>
